force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <description>One row per integration callout, success or failure. Rows are written after all callouts in a chunk complete, because pending DML blocks a subsequent callout in the same transaction. Grows unbounded - no purge job exists yet.</description>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>