force-app/main/default/objects/Integration_Log__c/fields/Duration_ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_ms__c</fullName>
    <description>Wall-clock milliseconds for the callout. Max 999999, comfortably above the 120000 ms Apex callout ceiling.</description>
    <label>Duration (ms)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>