force-app/main/default/objects/Integration_Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Callout URL, e.g. callout:Jira_Classic/rest/api/3/issue/10023/transitions. GUEST-SENSITIVE: names the credential and the Atlassian host, so withhold from any guest permission set.</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>