force-app/main/default/objects/Integration_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Exception message and type, or the parsed API error. GUEST-SENSITIVE: carries stack traces and Apex class names that describe org internals. Withhold from any guest permission set.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>