force-app/main/default/objects/Integration_Log__c/fields/Is_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the call returned a 2xx. Safe for guest exposure - carries no payload detail.</description>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>