force-app/main/default/objects/Integration_Log__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <description>Outbound payload. Benign for transitions today, but inbound webhook payloads land here in a later build and carry reporter and assignee PII. GUEST-SENSITIVE: withhold from any guest permission set.</description>
    <label>Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>