force-app/main/default/objects/Integration_Log__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>Raw response. GUEST-SENSITIVE, the worst offender on this object: Jira responses embed accountId, emailAddress, avatar URLs and internal workflow names. Never expose to a guest permission set.</description>
    <label>Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>