force-app/main/default/objects/Integration_Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>HTTP status code. Zero means the call never produced a response - timeout or CalloutException - so the row still exists and is distinguishable from a real 2xx/4xx/5xx.</description>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>