force-app/main/default/objects/Integration_Log__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Work item this call was made for. Null for calls not tied to a single record.</description>
    <label>Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>